[project]
name = "rl-policies-replication"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[atari,classic-control]>=1.1.1",
    "moviepy>=2.1.2",
    "mypy>=1.15.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "ptan>=0.4",
    "pytest>=8.3.5",
    "pytorch-ignite>=0.5.1",
    "ray[tune]>=2.44.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchrl>=0.7.2",
    "torchvision>=0.21.0",
]
